<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".ui.ayuda.ayuda">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/just_squash"
                android:text="@string/centro_de_ayudas"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@drawable/ayuda"
                android:contentDescription="@string/todo" />

            <Space
                android:id="@+id/space"
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tienes_problemas_con_la_aplicacion"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/si_tienes_algun_problema_para_realizar_alguna_reserva_o_algun_tipo_de_servicio_verifica_que_estes_conectado_a_internet_y_si_es_necesario_reinicia_la_aplicacion"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/es_seguro_utilizar_esta_aplicacion"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cada_dia_estamos_tratando_de_mejorar_aun_mas_la_seguridad_pero_confia_tus_datos_y_transferencias_estan_seguras"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/como_genero_genero_una_reserva"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/primero_te_debes_dirigir_a_la_seccion_de_sucursales_y_respectivamente_seleccionar_la_sucursal_de_preferencia_y_esta_mostrara_todos_los_planes_que_ofrece_y_aqui_podras_ponerla_al_carrito_donde_te_dara_la_opcion_de_pagar_tu_reserva"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/como_agrego_un_servicio"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/debes_dirigirte_a_la_seccion_de_servicios_y_podras_elegir_cuales_agregar_al_carrito_donde_luego_podras_cancelar_tus_reservas_y_servicios"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tienes_alguna_sugerencia_u_otro_tipo_de_problemas"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/si_tienes_algun_tipo_de_sugerencia_que_nos_ayude_a_mejorar_te_invitamos_a_que_nos_escribas_en_la_direccion_de_correo_que_se_proporciona_al_final_al_igual_encontratas_un_correo_para_algun_tipo_de_quejas_o_si_por_si_tienes_otro_tipo_de_problemas_no_dudes_en_contactarnos"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reportar_problemas"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soporte_hotelcaribe_com_co"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sugerencias"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sugerencias_hotelcaribe_com_co"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>