<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_login">


    <LinearLayout
        android:layout_width="318dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="184dp"
            android:layout_height="184dp"
            android:layout_marginBottom="-20dp"
            android:layout_marginTop="-150dp"
            app:srcCompat="@drawable/palmera"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_caribe"
            android:fontFamily="@font/just_squash"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@color/black"

            />
        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/input"
            android:hint="@string/correo_electronico"
            android:layout_marginTop="60dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/input"
            android:layout_marginTop="40dp"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/iniciar_sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/botones"
            android:text="@string/iniciar_sesi_n"
            tools:ignore="MissingConstraints"
            android:fontFamily="@font/just_squash"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botones"
            android:text="@string/registrarse"
            android:layout_marginTop="10dp"
            tools:ignore="MissingConstraints"
            android:fontFamily="@font/just_squash"
            android:textSize="20sp"/>




    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:visibility="gone"
        android:indeterminateDrawable="@drawable/bar"
        android:indeterminateDuration="@integer/material_motion_duration_long_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>